[package]
name = "ord-uuid"
repository = "https://github.com/josephcopenhaver/ord-uuid-rs"
description = "Creates lexically sortable uuid values of size 16 bytes."
license = "MIT"
version = "0.1.10"
edition = "2021"

[dependencies]
rand = "0.8.5"
uuid = { version = "1.13.1", features = ["v1", "fast-rng", "macro-diagnostics", "v6", "v7"] }
